refactor and fix bugs form customer

--- a/MedicalManagement/Forms/frmMedicine.resx
+++ b/MedicalManagement/Forms/frmMedicine.resx
@@ -117,11 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="itemBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnFirst.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAAUJJREFUaEPtmEFKw0AUhrNw1a03EOkFvIO7rrxQ1+IZ2kMIgpDYrUjvIGISqO7c
+        vAAADrwBlbxySQAAAUJJREFUaEPtmEFKw0AUhrNw1a03EOkFvIO7rrxQ1+IZ2kMIgpDYrUjvIGISqO7c
         OHEzvtQ/MA5T0iZ9i1f+D/5FXzKZ/4fXzEwyQgghhBCyP3fPn1ed5ut6gvIoVt6f5Rt3gZ+63L58+E5t
         CJQH81Q3N0Xl3kS+qJolynocK0BeuqmYfvwzDtXuB5f1GBvgvvaTovqei2H3zzyE2/QYE0AMzkSvoeFY
         uFWPIQFW7+6yKN1DynAsDNHjkAB97ZIShuqxbwAx09suKWG4Hn0BDmmXlPAYPXYFGNIuKeFxeqQCyPv7
@@ -132,7 +135,7 @@
   <data name="btnLast.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAAQZJREFUaEPtmE8KgkAUh120atsNIrpAd2jXqgu5js5QhwiCwMltRHcISQeqXZtm
+        vAAADrwBlbxySQAAAQZJREFUaEPtmE8KgkAUh120atsNIrpAd2jXqgu5js5QhwiCwMltRHcISQeqXZtm
         2kyKbyD6I2pI8+L3wbdwHOX94KkzegAAAAAAoBrBUXVDY1p0+BX+Tranm/PASsPNIRI9E4kyqdFa6jEN
         1yYrerI9GSsNN0dauKYA1lUQqz6drswvAjwWb1UiufoLado0rTSuBLDuU0c0tRSuBciN1TI8qB5dUoib
         AXJLtZXLAayFbcUhQO6HtuITIPelrbgFsEZCqmF2P64BMnUQXzoIUJU3hdSRbQsxfogZv0bZfsgYLyUY
@@ -142,7 +145,7 @@
   <data name="btnNext.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAAzFJREFUaEPtWctu00AUjYANDyEeKx5bVggE2E7ort+ACmILbNiAWPFedEHLDgFN
+        vAAADrwBlbxySQAAAzFJREFUaEPtWctu00AUjYANDyEeKx5bVggE2E7ort+ACmILbNiAWPFedEHLDgFN
         ahuQkFg2FKHyAXxDUQo04wi1QQhoy5YEFMK55oKQM5bH47ELUo50ZCeZe+6d98xNaYghhjCA8f4G50HL
         sTxxxfZE3fab83iugV0mvb8C65YvrtruYpls2Hr9YPmv9yDYWwhsCeyn5LLtiomjU2/3slxxOPL43Q7H
         De4hiK+RoHTYsX0xdWh6aSfL5wvHa56A04+RIDLT8cQnPMfYjXmcnOlv5FaXBmCM6I3R8Zeb2K0ZjNxp
